@@ -39,3 +39,5 @@ Config::MVP::Reader::INI = 2    ; ensure there's a basic config format
 remove = Config ; why isn't this indexed?? -- rjbs, 2011-02-11
 remove = Dist::Zilla::Tester::_Role ; mistakenly added by autoprereq
 remove = Some::Package::That::Does::Not::Exist::Due::To::A::Typo
+
+[CPANFile]
