@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          added the CPANFile plugin to create "cpanfile" prereq format
 
 4.300013  2012-03-31 15:55:47 Europe/Paris
           dzil test has a new option, --all, which is the equivalent of
